--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,6 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
+	compile group: 'com.jolbox', name: 'bonecp', version: '0.8.0.RELEASE'
     testCompile 'junit:junit:4.12'
 }
