--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
 	compile group: 'com.jolbox', name: 'bonecp', version: '0.8.0.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.3'
+    compile 'org.apache.httpcomponents:httpclient:4.4'
     testCompile 'junit:junit:4.12'
 }
