--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
     //mavenCentral()
 }
 
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
 	compile group: 'com.jolbox', name: 'bonecp', version: '0.8.0.RELEASE'
